--- a/now.json
+++ b/now.json
@@ -7,5 +7,8 @@
       "src": "/_next/static/(?:[^/]+/pages|chunks|runtime)/.+",
       "headers": { "cache-control": "immutable" }
     }
-  ]
+  ],
+  "env": {
+    "APP_PATH": "@app_path"
+  }
 }
