--- a/now.json
+++ b/now.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "name": "dolar-uvita-frontend",
+  "alias": ["dolar-uvita.now.sh"],
   "builds": [{ "src": "next.config.js", "use": "@now/next" }],
   "routes": [
     {
