--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.3.1",
-    "dotenv": "^7.0.0",
     "moment": "^2.24.0",
     "next": "^8.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
-    "recharts": "^1.5.0",
-    "webpack": "^4.29.6"
+    "recharts": "^1.5.0"
   },
   "scripts": {
     "dev": "next dev",
